package com.kilimo.ticket.dto;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class TicketCategoryDTO {
    private Long id;
    private String name;
    private String description;
}
